--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "php": ">=7.4",
     "ext-curl": "*",
     "php-webdriver/webdriver": "^1.12",
-    "symfony/var-dumper": "v5.4.2"
+    "symfony/var-dumper": "v5.4.2",
+    "php-ffmpeg/php-ffmpeg": "^0.19.0"
   },
   "license": "MIT",
   "authors": [
     {
       "name": "Eboubaker Bekkouche",
+      "homepage": "eboubaker.xyz",
       "email": "eboubakkar@gmail.com"
     }
   ],
