--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,24 @@
 {
   "name": "eboubaker/scrapper",
-  "description": "CLI based Web Media-Scrapper in PHP",
+  "description": "CLI based Web Media-Scrapper",
   "type": "project",
   "require": {
-    "php": ">=7.4",
+    "php": "^7.4|^8.0",
     "ext-curl": "*",
     "php-webdriver/webdriver": "^1.12",
+    "php-ffmpeg/php-ffmpeg": "^0.19.0",
+    "tightenco/collect": "^8.81",
     "symfony/var-dumper": "v5.4.2",
-    "php-ffmpeg/php-ffmpeg": "^0.19.0"
+    "vanilla/garden-cli": "^3.1"
   },
-  "license": "MIT",
+  "require-dev": {
+    "phpunit/phpunit": "^9.5"
+  },
+  "license": "CC-BY-3.0",
   "authors": [
     {
       "name": "Eboubaker Bekkouche",
-      "homepage": "eboubaker.xyz",
+      "homepage": "https://eboubaker.xyz",
       "email": "eboubakkar@gmail.com"
     }
   ],
@@ -26,7 +31,7 @@
     }
   },
   "scripts": {
-    "test": "php src/scrapper.php https://www.reddit.com/r/factorio/comments/lj5pb8",
-    "scrap": "php src/scrapper.php"
+    "test": "./vendor/bin/phpunit --testdox tests",
+    "wtest": "vendor\\bin\\phpunit --testdox tests"
   }
 }
