--- a/composer.json
+++ b/composer.json
@@ -3,16 +3,17 @@
   "description": "CLI based Web Media-Scrapper",
   "type": "project",
   "require": {
-    "php": "^7.4|^8.0|^8.1",
+    "php": ">=7.4",
+    "ext-json": "*",
     "ext-curl": "*",
+    "ext-dom": "*",
+    "ext-mbstring": "*",
     "php-ffmpeg/php-ffmpeg": "^0.19.0",
     "tightenco/collect": "^8.81",
     "symfony/var-dumper": "v5.4.2",
     "vanilla/garden-cli": "^3.1",
-    "ext-json": "*",
-    "symfony/dom-crawler": "^6.0",
-    "symfony/css-selector": "^6.0",
-    "ext-mbstring": "*"
+    "symfony/dom-crawler": "v5.4.3",
+    "symfony/css-selector": "v5.4.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5"
