--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "symfony/var-dumper": "v5.4.2",
     "vanilla/garden-cli": "^3.1",
     "symfony/dom-crawler": "v5.4.3",
-    "symfony/css-selector": "v5.4.3"
+    "symfony/css-selector": "v5.4.3",
+    "symfony/polyfill-php80": "^1.24"
   },
   "config": {
     "platform": {
