--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
   ],
   "autoload": {
     "files": [
-      "src/helpers.php"
+      "src/Tools/helpers.php"
     ],
     "psr-4": {
       "Eboubaker\\Scrapper\\": "src/"
