--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,23 @@
     "ext-curl": "*",
     "ext-dom": "*",
     "ext-mbstring": "*",
+    "ext-zend-opcache": "*",
+    "ext-parallel": "*",
+    "ext-fileinfo": "*",
+    "amphp/parallel": "^1.4",
+    "guzzlehttp/guzzle": "^7.4",
+    "symfony/dom-crawler": "v5.4.3",
     "php-ffmpeg/php-ffmpeg": "^0.19.0",
     "tightenco/collect": "^8.81",
+    "symfony/css-selector": "v5.4.3",
     "symfony/var-dumper": "v5.4.2",
     "vanilla/garden-cli": "^3.1",
-    "symfony/dom-crawler": "v5.4.3",
-    "symfony/css-selector": "v5.4.3",
-    "symfony/polyfill-php80": "^1.24"
+    "symfony/polyfill-php80": "^1.24",
+    "ralouphie/mimey": "^2.1",
+    "monolog/monolog": "^2.3"
   },
   "config": {
+    "platform-check": true,
     "platform": {
       "php": "7.4"
     }
@@ -42,7 +50,7 @@
     }
   },
   "scripts": {
-    "test": "./vendor/bin/phpunit --testdox tests",
+    "test": "vendor/bin/phpunit --testdox tests",
     "wtest": "vendor\\bin\\phpunit --testdox tests"
   }
 }
