--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "symfony/polyfill-php80": "^1.24",
     "ralouphie/mimey": "^2.1",
     "monolog/monolog": "^2.3",
-    "eboubaker/json-finder": "*"
+    "eboubaker/json-finder": "*",
+    "adhocore/cli": "v0.9.0"
   },
   "config": {
     "platform-check": true,
